[tool.poetry]
name = "streamlit-chatgpt-simple-interface"
version = "0.1.0"
description = ""
authors = ["HEKUCHAN <heitorhirose@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
openai = "^1.59.3"
streamlit = {url = "https://core-previews.s3-us-west-2.amazonaws.com/pr-9491/streamlit-1.39.0-py2.py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
